# colorutil

./: Cargo.toml  README.md  config.toml
examples/: config.rs  config.toml  default.toml  example-out.txt  example.txt
src/: color.rs  config.rs  lib.rs  main.rs  parse.rs
