[package]
name = "colorutil"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
palette = { version = "0.7.6", features = ["serde"] }
itertools = "0.14.0"
confy = "0.6.1"

clap = { version = "4.5.37", features = ["derive", "env"] }
clap_complete = "4.5.50"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"